--- a/manager/deployer/src/main/resources/webapp/templates/home/screen/addCanal.vm
+++ b/manager/deployer/src/main/resources/webapp/templates/home/screen/addCanal.vm
@@ -102,7 +102,8 @@ $control.setTemplate("home:navigation.vm")
 	  <tr> 
         <th width="300">数据源类型：</th>
         <td width="329">
-			<input type="radio" name="$canalParameterGroup.sourcingType.key" value="MYSQL" onclick="changeDisplay('mysqlSourcing','table-row');changeDisplay('oracleSourcing','none');changeDisplay('localSourcing','none');" id="RadioGroup5_0" checked="checked" class="radio"/>mysql &nbsp;
+			<input type="radio" name="$canalParameterGroup.sourcingType.key" value="MYSQL" onclick="changeDisplay('mysqlSourcing','table-row');changeDisplay('kafkaSourcing','none');changeDisplay('oracleSourcing','none');changeDisplay('localSourcing','none');" id="RadioGroup5_0" checked="checked" class="radio"/>mysql &nbsp;
+			<input type="radio" name="$canalParameterGroup.sourcingType.key" value="KAFKA" onclick="changeDisplay('mysqlSourcing','none');changeDisplay('kafkaSourcing','table-row');changeDisplay('localSourcing','none');" id="RadioGroup5_1" class="radio"/>kafka &nbsp;
 			#**
 			<input type="radio" name="$canalParameterGroup.sourcingType.key" value="ORACLE" onclick="changeDisplay('mysqlSourcing','none');changeDisplay('oracleSourcing','table-row');changeDisplay('localSourcing','none');" id="RadioGroup5_1" class="radio"/>oracle &nbsp;
             <input type="radio" name="$canalParameterGroup.sourcingType.key" value="LOCALBINLOG" onclick="changeDisplay('mysqlSourcing','none');changeDisplay('oracleSourcing','none');changeDisplay('localSourcing','table-row');" id="RadioGroup5_2" class="radio"/>localbinlog &nbsp;
@@ -116,7 +117,9 @@ $control.setTemplate("home:navigation.vm")
         <td width="329">
 			<textarea class="service" name="$canalParameterGroup.groupDbAddresses.key" cols="45" rows="5" >$!canal.canalParameter.groupDbAddresses.value</textarea><span class="red">*</span>
 			<br />
-			<span>格式如 127.0.0.1:3306;(必须以分号结束，可添多个)</span>
+			<span>mysql格式如 127.0.0.1:3306;(必须以分号结束，可添多个)</span>
+			<br />
+			<span>kafka格式如 127.0.0.1:9092;(必须以分号结束，可添多个)</span>
 			<br />
 			<span class="red">#addCanalMessage ($canalParameterGroup.groupDbAddresses)</span>
 		</td>
@@ -145,7 +148,7 @@ $control.setTemplate("home:navigation.vm")
 			<span class="red">#addCanalMessage ($canalParameterGroup.connectionCharset)</span>
 		</td>
       </tr>
-	  #**
+	  
 	  <tr class="mysqlSourcing"> 
         <th width="300">链接到mysql的slaveId：</th>
         <td width="329">
@@ -154,13 +157,23 @@ $control.setTemplate("home:navigation.vm")
 			<span class="red">#addCanalMessage ($canalParameterGroup.slaveId)</span>
 		</td>
       </tr>
-	  *#
+	  
 	  <tr class="localSourcing">
         <th width="300">本地localBinlog目录：</th>
         <td width="329">
             <input type="text" name="$canalParameterGroup.localBinlogDirectory.key" value="$!canal.canalParameter.localBinlogDirectory.value" class="setting_input"/>
 			<br />
 			<span class="red">#addCanalMessage ($canalParameterGroup.localBinlogDirectory)</span>
+		</td>
+      </tr>
+	 
+	  
+	 <tr class="kafkaSourcing">
+        <th width="300">kafka的topic列表：</th>
+        <td width="329">
+            <input type="text" name="$canalParameterGroup.kafkaTopicList.key" value="$!canal.canalParameter.kafkaTopicList.value" class="setting_input"/><span class="red">*</span>
+			<br />
+			<span class="red">#addCanalMessage ($canalParameterGroup.kafkaTopicList)</span>
 		</td>
       </tr>
 	  </div>
@@ -421,18 +434,9 @@ $control.setTemplate("home:navigation.vm")
 	  <tr>
        <th>过滤表达式：</th>
        <td>
-    		<textarea cols="80" rows="5" name="$canalParameterGroup.blackFilter.key">$!canalParameterGroup.blackFilter.value</textarea><span class="red">*</span>
+    		<textarea cols="45" rows="5" name="$canalParameterGroup.blackFilter.key">$!canalParameterGroup.blackFilter.value</textarea><span class="red">*</span>
     		<br />
-    		<span class="red">mysql 数据解析关注的表，Perl正则表达式.<br/>
-多个正则之间以逗号(,)分隔，转义符需要双斜杠(\\)<br/>
-
-常见例子：<br/>
-1.  所有表：.*   or  .*\\..*<br/>
-2.  canal schema下所有表： canal\\..*<br/>
-3.  canal下的以canal打头的表：canal\\.canal.*<br/>
-4.  canal schema下的一张表：canal.test1<br/>
-5.  多个规则组合使用：canal\\..*,mysql.test1,mysql.test2 (逗号分隔)<br/>
-    		#addCanalMessage ($canalParameterGroup.blackFilter)</span>
+    		<span class="red">#addCanalMessage ($canalParameterGroup.blackFilter)</span>
 	   </td>
       </tr>
 	  <tr>
@@ -452,7 +456,7 @@ $control.setTemplate("home:navigation.vm")
 <script language="javascript">
 <!--
 	changeDisplay('mysqlSourcing','table-row')
-	changeDisplay('oracleSourcing','none')
+	changeDisplay('kafkaSourcing','none')
 	changeDisplay('localSourcing','none')
 	
 	changeDisplay('memoryStorage','table-row')
