--- a/manager/deployer/src/main/resources/webapp/templates/home/screen/addColumnPair.vm
+++ b/manager/deployer/src/main/resources/webapp/templates/home/screen/addColumnPair.vm
@@ -6,33 +6,14 @@ $control.setTemplate("home:navigation.vm")
     function Add(ObjSource, ObjTarget) { 
        if(ObjSource.val() ==null) return;    // 如果没有选择则退出函数，无这句话的话IE6会报错 
         jQuery.each(ObjSource.val(), function(i, n) {    // 循环原列表中选中的值，依次添加到目标列表中 
-            if (ObjSource.attr("id")=="dltSource_l"){
-            	var html = "<option value='" + n+":"+$("#isPk option:selected").val()+":"+ $("#pkFunctionName option:selected").val()+ "' selected='selected'>" 
-            	+ n+"-"+$("#isPk option:selected").text()+"-"+ $("#pkFunctionName option:selected").text() + "</option>"; 
-            	ObjTarget.append(html); 
-            }else{
-            	var arrayn=n.split(':');
-            	var html = "<option value='" + arrayn[0]+ "' selected='selected'>" + arrayn[0] + "</option>"; 
-            	ObjTarget.append(html);
-            }
+            var html = "<option value='" + n + "' selected='selected'>" + n + "</option>"; 
+            ObjTarget.append(html); 
         }); 
         ObjSource.find("option:selected").remove(); // 原列表中选中的值删除 
     } 
     /* 添加全部 */ 
     function AddAll(ObjSource, ObjTarget) { 
-    	$("#"+ObjSource.attr("id")+" option").each(function () {    // 循环原列表中选中的值，依次添加到目标列表中 
-    	var n= $(this).val(); 
-            if (ObjSource.attr("id")=="dltSource_l"){
-            	var html = "<option value='" + n+":"+$("#isPk option:selected").val()+":"+ $("#pkFunctionName option:selected").val()+ "' selected='selected'>" 
-            	+ n+"-"+$("#isPk option:selected").text()+"-"+ $("#pkFunctionName option:selected").text() + "</option>"; 
-            	ObjTarget.append(html); 
-            }else{
-            	var arrayn=n.split(':');
-            	var html = "<option value='" + arrayn[0]+ "' selected='selected'>" + arrayn[0] + "</option>"; 
-            	ObjTarget.append(html);
-            }
-        }); 
-       // ObjTarget.append(ObjSource.html()); // 目标列表的HTML加上原列表的所有HTML 
+        ObjTarget.append(ObjSource.html()); // 目标列表的HTML加上原列表的所有HTML 
         ObjSource.empty(); // 原列表清空 
     }
 	
@@ -106,21 +87,11 @@ $control.setTemplate("home:navigation.vm")
         <input type="button" class="btn_down2" onclick="AddAll($('#dltSource_l'),$('#dltTarget_l'))" /> 
         <input type="button" class="btn_up1" onclick="Add($('#dltTarget_l'),$('#dltSource_l'))" /> 
         <input type="button" class="btn_up2" onclick="AddAll($('#dltTarget_l'),$('#dltSource_l'))" /> 
-        <select name="isPk" id="isPk" style="height:24px;width:80px;">
-        	<option value="0">非主键</option>
-        	<option value="1">主键</option>
-        </select>
-        <select name="pkFunctionName" id="pkFunctionName" style="height:24px;width:100px;">
-        	<option value="ori">原始值</option>
-        	<option value="reverse">倒排字符串</option>
-        </select>
   </div> 
   <div class="box3"> 
         <select id="dltTarget_l" name="$columnPair.dltTarget_l.key" multiple="multiple"> 
 			#foreach ($underSourceColumn in $underSourceColumns)
-				#set ($gid = $underSourceColumn.indexOf("|")) 
-				#set ($gid2 = $gid+1) 
-				<option value="$!{underSourceColumn.substring(0,$gid)}" selected="selected">$!{underSourceColumn.substring($gid2)}</option> 
+				<option value="$!underSourceColumn" selected="selected">$!underSourceColumn</option> 
             #end
         </select> 
   </div> 
