--- a/manager/deployer/src/main/resources/webapp/templates/home/screen/addDataSource.vm
+++ b/manager/deployer/src/main/resources/webapp/templates/home/screen/addDataSource.vm
@@ -6,26 +6,7 @@ $control.setTemplate("home:navigation.vm")
 <script language="javascript">
 <!--
 	changeNav("datamedia");
-	
-function changeform(){
-	if (addSourceForm.sourceType.value=='KAFKA'){
-		$("#dsUrl").html("zookeeper hosts:");
-	}else if (addSourceForm.sourceType.value=='HBASE'){
-		$("#dsUrl").html("hbase-site:");
-	}else if (addSourceForm.sourceType.value=='ELASTICSEARCH'){
-		$("#dsUrl").html("hosts:");
-	}else if (addSourceForm.sourceType.value=='CASSANDRA'){
-		$("#dsUrl").html("url:");
-	}else if (addSourceForm.sourceType.value=='HDFS-ARVO'){
-		$("#dsUrl").html("hdfs-site:");
-	}else if (addSourceForm.sourceType.value=='MYSQL'){
-		$("#dsUrl").html("url:");
-	}else if (addSourceForm.sourceType.value=='ORACLE'){
-		$("#dsUrl").html("url:");
-	}else if (addSourceForm.sourceType.value=='GREENPLUM'){
-		$("#dsUrl").html("url:");
-	}
-}
+
 //-->
 </script>
 #macro (addDataSourceMessage $field)
@@ -44,7 +25,7 @@ function changeform(){
 	<input type="hidden" name="event_submit_do_add" value="1" />
  <div class="setting_box">
 	#set ($dataMediaSourceGroup = $form.dataMediaSourceInfo.defaultInstance)
-    <table cellpadding="0" cellspacing="0" class="setting_otter" width="100%">
+    <table cellpadding="0" cellspacing="0" class="setting_otter">
 		<span class="red">#addDataSourceMessage ($dataMediaSourceGroup.formDataMediaSourceError)</span>
       <tr> 
         <th width="300">数据源名字：</th>
@@ -58,14 +39,15 @@ function changeform(){
         <th>类型：</th>
         <td>
             <select id="sourceType" name="$dataMediaSourceGroup.type.key" onchange="changeform();" >
+            <option value="MYSQL">MySQL</option>
+            <option value="ORACLE">Oracle</option>
             <option value="KAFKA">KAFKA</option>
-            <option value="MetaQ">MetaQ</option>
+            #**
             <option value="HBASE">HBASE</option>
             <option value="ELASTICSEARCH">ELASTICSEARCH</option>
             <option value="CASSANDRA">CASSANDRA</option>
-            <option value="MYSQL">MySQL</option>
-            <option value="ORACLE">Oracle</option>
             <option value="GREENPLUM">GREENPLUM</option>
+            *#
 			</select><span class="red">*</span>
         </td>
       </tr>
@@ -86,7 +68,7 @@ function changeform(){
 		</td>
       </tr>
 	  <tr> 
-        <th id="dsUrl">zookeeper hosts：</th>
+        <th>URL：</th>
         <td>
 			<input id="sourceUrl" name="$dataMediaSourceGroup.url.key" value="$!dataMediaSourceGroup.url.value" type="text" class="setting_input"/>
 			<br />
@@ -129,7 +111,7 @@ function changeform(){
 			HBASE例子 :/home/da/hbase-site.xml<br/>
 			ELASTICSEARCH例子 :test74:9300;test75:9300;test76:9300||clustername||indexname<br/>
 			CASSANDRA例子 :test75:2688;test76:2688<br/>
-			HDFS-ARVO例子 :/home/da/hdfs-site.xml||hdfs://test74:8020/Users/data/<br/>
+			GreenPLUM例子:
 			media例子 : jdbc:mysql://groupKey=key (更改 key)
 		</td>
       </tr>
