--- a/manager/deployer/src/main/resources/webapp/templates/home/screen/dataMediaPairInfo.vm
+++ b/manager/deployer/src/main/resources/webapp/templates/home/screen/dataMediaPairInfo.vm
@@ -77,7 +77,7 @@ $control.setTemplate("home:navigation.vm")
 	<th>字段同步：</th>
 		<td>
 			#foreach($columnPair in $columnPairs)
-                <span class="red">[</span> $!{columnPair.sourceColumn.name}-$!{columnPair.isPk}-${columnPair.functionName} - $!{columnPair.targetColumn.name}  <span class="red">]</span>
+                <span class="red">[</span> $columnPair.sourceColumn.name - $columnPair.targetColumn.name  <span class="red">]</span>
 			#end
 		</td>
   </tr>
@@ -87,7 +87,7 @@ $control.setTemplate("home:navigation.vm")
 	<th>组合同步：</th>
 		<td>
 			#foreach($columnPair in $columnGroup.columnPairs)
-				 <span class="red">[</span> $!{columnPair.sourceColumn.name}-$!{columnPair.isPk}-$!{columnPair.functionName}  - $!{columnPair.targetColumn.name}  <span class="red">]</span>
+				 <span class="red">[</span> $columnPair.sourceColumn.name - $columnPair.targetColumn.name  <span class="red">]</span>
 			#end
 		</td>
   </tr>
